# CMakeDynamicLinkLib

./: CMakeLists.txt  Readme.md
src/exe/: CMakeLists.txt  exe.cpp
src/lib/: CMakeLists.txt  lib.cpp  lib1.h
src/lib/cmake/: lib1Config.cmake
src/lib/inner/: lib2.h
